# python-testing-patching

./: pyproject.toml
models/: product.py
serializers/: base.py  product.py
services/: currency.py
tests/unit/serializers/: test_product_serializer.py
tests/unit/services/: test_currency_service.py
tests/unit/utils/: test_converter.py
utils/: converter.py
